# multiqueue_experiments

./: .gitmodules  CMakeLists.txt  CMakePresets.json  distribution.cpp  insert_delete.cpp  knapsack.cpp  knapsack_external.cpp  knapsack_simple.cpp  knapsack_wrapper.cpp  multiqueue  quality.cpp  shortest_path.cpp  split_workload.cpp  stress_test.cpp  system_config.hpp.in  throughput.cpp
benchmarks/: CMakeLists.txt  coloring.cpp  contention.cpp  dijkstra.cpp  dijkstra_seq.cpp  knapsack.cpp  knapsack_node.cpp  knapsack_seq.cpp  monotonic.cpp  push_pop.cpp  shortest_path.cpp  shortest_path_seq.cpp  sssp_dijkstra.cpp  sssp_dijkstra_seq.cpp  stress_test.cpp  synthetic.cpp  throughput.cpp
benchmarks/util/: barrier.hpp  build_info.hpp  common.hpp  counting_handle.hpp  evaluate_quality.cpp  evaluate_quality.hpp  graph.hpp  knapsack_instance.hpp  operation_log.cpp  operation_log.hpp  priority_queue_factory.hpp  priority_queue_selection.hpp  replay_tree.hpp  selector.hpp  termination_detection.hpp  thread_coordination.hpp  threading.cpp  threading.hpp
benchmarks/utils/: priority_queue_factory.hpp
benchmarks/wrapper/: CMakeLists.txt  capq.cpp  capq.hpp  klsm.hpp  linden.cpp  linden.hpp  locked_pq.hpp  multiqueue.hpp  selector.hpp  spraylist.cpp  spraylist.hpp  tbb_priority_queue.hpp  tbb_queue.hpp  util.hpp
cmake/: FindPAPI.cmake
common/: CMakeLists.txt  barrier.hpp  priority_queue_factory.hpp  thread_coordination.hpp  threading.cpp  threading.hpp
data/: knapsack_instances.txt  knapsack_instances_small.txt
scripts/: benchmark_single.sh  benchmark_sssp.sh  benchmark_variants.sh  experiment.sh  log_version.sh  multinom.r  plot_quality.r  plots.r  run.sh
src/: CMakeLists.txt  benchmark.cpp  coloring.cpp  distribution.cpp  evaluate_quality.cpp  evaluate_quality.hpp  insert_delete.cpp  quality.cpp  quality.hpp  shortest_path.cpp  split_workload.cpp  throughput.cpp
src/util/: CMakeLists.txt  priority_queue_factory.hpp  replay_tree.hpp  thread_coordination.hpp
tests/: CMakeLists.txt  replay_tree.cpp  wrapper.cpp
tools/: CMakeLists.txt  analyze_quality.cpp  evaluate_quality.cpp  knapsack_generator.cpp  replay_tree.hpp  sequential_knapsack.cpp  sequential_shortest_path.cpp
unit_tests/: CMakeLists.txt  replay_tree.cpp  wrapper.cpp
util/: affinity.hpp  build_info.hpp  knapsack_instance.hpp  operation_log.cpp  operation_log.hpp  priority_queue_factory.hpp  replay_tree.hpp  task.hpp  termination_detection.hpp  thread_coordination.hpp
utils/: barrier.hpp  inserting_strategy.hpp  operation_generator.hpp  priority_queue_factory.hpp  thread_coordination.hpp  threading.cpp  threading.hpp  xoroshiro256starstar.hpp
wrapper/: CMakeLists.txt  capq.cpp  capq.hpp  klsm.hpp  linden.cpp  linden.hpp  locked_pq.hpp  mq_pq.hpp  multiqueue.hpp  priority.hpp  selector.hpp  smq.hpp  spraylist.cpp  spraylist.hpp  tbb_priority_queue.hpp  tbb_queue.hpp  util.hpp
